# larder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  TESTING.md
.github/workflows/: ci.yml
scripts/: install-launchd.sh
scripts/launchd/: com.kotachisam.larder.plist.template
src/: cli.rs  config.rs  digest.rs  extract.rs  find.rs  format.rs  format_qa.rs  grep.rs  history.rs  ingest.rs  lib.rs  main.rs  mcp.rs  open.rs  proxy.rs  results_cache.rs  search.rs  util.rs  watch.rs
src/store/: mod.rs  queries.rs  schema.rs
src/transcript/: event.rs  mod.rs  paths.rs
tests/fixtures/: README.md
