[package]
name = "larder"
version = "0.1.0"
authors = ["Samuel K. Norton"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Local cache of LLM CLI transcripts (Claude Code now; more soon) for offline retrieval and querying."
repository = "https://github.com/kotachisam/larder"
readme = "README.md"
keywords = ["llm", "claude", "cli", "transcript", "cache"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
humantime = "2"
notify = "6"
notify-debouncer-mini = "0.4"
owo-colors = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
